[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://imagens/niveis/MolduraDefensorPronta.png" type="Texture" id=2]
[ext_resource path="res://imagens/hud/pixil-frame-0 (5)_scaled_14x_pngcrushed (3).png" type="Texture" id=3]
[ext_resource path="res://imagens/hud/pixil-frame-0 (5)_scaled_14x_pngcrushed (5) (2).png" type="Texture" id=4]
[ext_resource path="res://cenas/menu/config.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 450, 600, 450 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 600, 600 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 450, 600, 450 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 900, 600, 450 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D2" type="Node2D"]
position = Vector2( 243, 59 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -265.0
margin_top = -67.0
margin_right = 220.0
margin_bottom = 40.0

[node name="nome_nivel" type="Sprite" parent="VBoxContainer"]
position = Vector2( 119, 151 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 2 )

[node name="Node2D2" type="Node2D" parent="VBoxContainer"]
position = Vector2( 261, 84 )

[node name="pont_2" type="AnimatedSprite" parent="VBoxContainer/Node2D2"]
position = Vector2( -137, -27 )
scale = Vector2( 0.387, 0.387 )
frames = SubResource( 2 )

[node name="pont_1" type="AnimatedSprite" parent="VBoxContainer/Node2D2"]
position = Vector2( -141, 61 )
scale = Vector2( 0.387, 0.387 )
frames = SubResource( 4 )

[node name="pont_0" type="Sprite" parent="VBoxContainer/Node2D2"]
position = Vector2( -141, 61 )
scale = Vector2( 0.387, 0.387 )
texture = ExtResource( 3 )

[node name="pont3" type="AnimatedSprite" parent="VBoxContainer/Node2D2"]
position = Vector2( -140, -24 )
scale = Vector2( 0.387, 0.387 )
frames = SubResource( 6 )

[node name="pont_4" type="AnimatedSprite" parent="VBoxContainer/Node2D2"]
position = Vector2( -140, -84 )
scale = Vector2( 0.387, 0.387 )
frames = SubResource( 8 )

[node name="moldura" type="Sprite" parent="VBoxContainer"]

[node name="timer_hud" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="config" parent="." instance=ExtResource( 5 )]
layer = 3

[connection signal="timeout" from="timer_hud" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="timer_hud" to="." method="_on_timer_hud_timeout"]
[connection signal="blur_off" from="config" to="." method="_on_config_blur_off"]
[connection signal="blur_on" from="config" to="." method="_on_config_blur_on"]
